# naturally-aware-decoding

./: .gitignore  .gitmodules  README.md  outputs.json  pyproject.toml
configs/: rm_config.yaml  seq_training_args.yaml
evaluation/scores/: write_table.ipynb
evaluation/scores/qa_decode_v1/: t-index_sequence_ende_ntrex-128_results_scores.json  t-index_sequence_enfr_ntrex-128_results_scores.json  t-index_sequence_enzh_ntrex-128_results_scores.json  t-index_token_ende_ntrex-128_results_scores.json  t-index_token_enfr_ntrex-128_results_scores.json  t-index_token_enzh_ntrex-128_results_scores.json
preprocessing/: prepare_lmflow_ds.ipynb
results/: add_references.ipynb
results/_qa_decode_v1/: t-index_segment_enms_ntrex-128_results.json  t-index_segment_enzh_ntrex-128_results.json  t-index_sequence_enzh_ntrex-128_results.json  t-index_token_enzh_ntrex-128_results.json
results/qa_decode/: t-index_sequence_ende_ntrex-128_results.json  t-index_sequence_enfr_ntrex-128_results.json  t-index_sequence_enzh_ntrex-128_results.json  t-index_token_ende_ntrex-128_results.json  t-index_token_enfr_ntrex-128_results.json  t-index_token_enzh_ntrex-128_results.json
results/qa_decode_v1/: natural_segment_enko_ntrex-128_results.json  natural_segment_enms_ntrex-128_results.json  natural_segment_enzh_ntrex-128_results.json  natural_token_enzh_ntrex-128_results.json  t-index_segment_enzh_ntrex-128_results.json  t-index_token_enzh_ntrex-128_results.json
scripts/: decode.sh  eval.sh  reproduce.sh  rm.sh  run_rerank.sh  run_train.sh  tune_reranker.sh
src/: train_utils.py
src/evaluation/: eval.py  segmenter.py  translationese_eval.py  utils.py
src/qa_decoding/: data_utils.py  gen_utils.py  generate.py  qa_decode.py  reranker.py  segmenter.py  utils.py
src/qa_decoding/rerankers/: base_reranker.py  likelihood.py  multi_reranker.py  qe_rerank.py  ratios.py  rerank_args.py
t_index_reproduce/: .gitignore  produce_table.ipynb
t_index_reproduce/data/synthetic/: multilingual.ipynb
t_index_reproduce/data/synthetic/ende/coca_blog_qwen/: test.jsonl
t_index_reproduce/data/synthetic/ende/coca_mag_qwen/: test.jsonl
t_index_reproduce/data/synthetic/ende/coca_news_qwen/: test.jsonl
t_index_reproduce/data/synthetic/ende/coca_web_qwen/: test.jsonl
t_index_reproduce/data/synthetic/ende/great_expectations_qwen/: test.jsonl
t_index_reproduce/data/synthetic/ende/oliver_twist_qwen/: test.jsonl  train.jsonl  validation.jsonl
t_index_reproduce/data/synthetic/ende/tale_of_two_cities_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enfr/coca_blog_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enfr/coca_mag_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enfr/coca_news_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enfr/coca_web_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enfr/great_expectations_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enfr/oliver_twist_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enfr/tale_of_two_cities_qwen/: test.jsonl
t_index_reproduce/data/synthetic/enzh/coca_blog_llama/: test.jsonl  train.jsonl  validation.jsonl
t_index_reproduce/data/synthetic/enzh/coca_blog_qwen/: test.jsonl  train.jsonl  validation.jsonl
t_index_reproduce/data/synthetic/enzh/coca_fic_llama/: test.jsonl  train.jsonl  validation.jsonl
t_index_reproduce/data/synthetic/enzh/coca_fic_qwen/: test.jsonl  train.jsonl  validation.jsonl
t_index_reproduce/data/synthetic/enzh/coca_mag_llama/: test.jsonl  train.jsonl  validation.jsonl
t_index_reproduce/recipes/: synthetic_ende.yaml  synthetic_enfr.yaml  synthetic_enzh.yaml  wild.yaml
t_index_reproduce/results/: synthetic_ende_supervised_clf_seed20.jsonl  synthetic_ende_supervised_clf_seed30.jsonl  synthetic_ende_supervised_dpo_seed10.jsonl  synthetic_ende_supervised_dpo_seed20.jsonl  synthetic_ende_supervised_dpo_seed30.jsonl  synthetic_ende_supervised_rm_seed10.jsonl  synthetic_ende_supervised_rm_seed30.jsonl  synthetic_ende_unsupervised_seed10.jsonl  synthetic_ende_unsupervised_seed20.jsonl  synthetic_ende_unsupervised_seed30.jsonl  synthetic_enfr_supervised_clf_seed10.jsonl  synthetic_enfr_supervised_clf_seed20.jsonl  synthetic_enfr_supervised_clf_seed30.jsonl  synthetic_enfr_supervised_dpo_seed10.jsonl  synthetic_enfr_supervised_dpo_seed20.jsonl  synthetic_enfr_supervised_dpo_seed30.jsonl  synthetic_enfr_unsupervised_seed10.jsonl  synthetic_enfr_unsupervised_seed20.jsonl  synthetic_enfr_unsupervised_seed30.jsonl
t_index_reproduce/results_v2/: synthetic_ende_supervised_clf_seed10.jsonl  synthetic_ende_supervised_clf_seed20.jsonl  synthetic_ende_supervised_dpo_seed10.jsonl  synthetic_ende_supervised_dpo_seed20.jsonl  synthetic_ende_supervised_dpo_seed30.jsonl  synthetic_ende_supervised_rm_seed20.jsonl  synthetic_ende_unsupervised_rm_seed10.jsonl  synthetic_ende_unsupervised_rm_seed20.jsonl  synthetic_ende_unsupervised_rm_seed30.jsonl  synthetic_ende_unsupervised_sft_seed10.jsonl  synthetic_ende_unsupervised_sft_seed20.jsonl  synthetic_ende_unsupervised_sft_seed30.jsonl  synthetic_enfr_supervised_clf_seed10.jsonl  synthetic_enfr_supervised_clf_seed20.jsonl  synthetic_enfr_supervised_clf_seed30.jsonl  synthetic_enfr_supervised_dpo_seed10.jsonl  synthetic_enfr_supervised_dpo_seed20.jsonl  synthetic_enfr_supervised_dpo_seed30.jsonl  synthetic_enfr_supervised_rm_seed10.jsonl  synthetic_enfr_supervised_rm_seed20.jsonl  synthetic_enfr_supervised_rm_seed30.jsonl  synthetic_enfr_unsupervised_rm_seed10.jsonl  synthetic_enfr_unsupervised_rm_seed20.jsonl  synthetic_enfr_unsupervised_rm_seed30.jsonl  synthetic_enfr_unsupervised_sft_seed10.jsonl  synthetic_enfr_unsupervised_sft_seed20.jsonl  synthetic_enfr_unsupervised_sft_seed30.jsonl
t_index_reproduce/scripts/run/: synthetic.sh  synthetic_constrastive.sh  wild.sh
t_index_reproduce/scripts/train/: dpo.sh  rm.sh  rm_contrastive.sh  sft.sh  sft_multilingual.sh  xlmr.sh
t_index_reproduce/src/: run_classification.py  score_functions.py  supervised.py  t_index.py  tv_score_utils.py  unsupervised.py  utils.py
(+28 files in other folders)
