[project]
name = "hit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.49.2",
    "evaluate>=0.4.0",
    "flash-linear-attention>=0.5.0",
    "importlib-metadata>=9.0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "kernels>=0.14.0",
    "litlogger>=2026.5.12",
    "litmodels>=0.1.8",
    "malaya>=5.1.1",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "transformers==5.5.3",
    "trl>=1.3.0",
    "unbabel-comet",
    "vllm>=0.20.0",
    "wandb>=0.26.1",
]

[project.optional-dependencies]
cpu = [
    "openrlhf[liger,ring]>=0.10.0",
    "torch>=2.10.0",
    "torchao>=0.16.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]

cu128 = [
    "flash-linear-attention>=0.5.0",
    "openrlhf[liger,ring]>=0.10.0",
    "torch>=2.10.0",
    "torchao>=0.16.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "flashinfer-jit-cache==0.6.8.post1",
    "flash-attn-3>=3.0.0",
]

cu130 = [
    "flash-linear-attention>=0.5.0",
    "openrlhf[liger,ring]==0.10.0",
    "torch>=2.10.0",
    "torchao>=0.16.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "flashinfer-jit-cache==0.6.8.post1",
    "bitsandbytes>=0.49.2",
    "flash-attn-3>=3.0.0",
    "causal-conv1d>=1.6.2.post1",
    "vllm>=0.21.0",
    "flash-attn-4[cu13]>=4.0.0b14",
]

[[tool.uv.index]]
name = "flashinfer-cu128"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu130"
url = "https://flashinfer.ai/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchao = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
flash-attn-3 = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
flashinfer-jit-cache = [
    { index = "flashinfer-cu128", extra = "cu128" },
    { index = "flashinfer-cu130", extra = "cu130" }
]

unbabel-comet = { git = "https://github.com/daniazie/COMET" }

[tool.uv]
override-dependencies = ["transformers==5.5.3", "datasets>=3.6.0"]
exclude-dependencies = ['pynvml']
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "cu130" },
    ]
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
flash-attn-3 = ["torch"]
flash-attn-4 = ["torch"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
